# solana-examples

./: .gitignore  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
addr-gating/: Cargo.toml
anchor/: Anchor.toml  index.ts  package.json  tsconfig.json
anchor-counter/programs/anchor-counter/: Cargo.toml
anchor/programs/anchor-counter/: Cargo.toml
anchor/programs/cpi-signer/: Cargo.toml
anchor/programs/escrow/: Cargo.toml
anchor/programs/kv-store/: Cargo.toml
anchor/programs/otc-escrow/: Cargo.toml  README.md
anchor/programs/pubkey-arg/: Cargo.toml
anchor/programs/puppet/: Cargo.toml
anchor/programs/puppet-master/: Cargo.toml
anchor/programs/puppet-master/src/: lib.rs
anchor/programs/reviews-variable-len/: Cargo.toml  README.md
anchor/programs/smart-wallet/: Cargo.toml  README.md
anchor/programs/spl-demo/: Cargo.toml  README.md
anchor/programs/spl-demo/src/: lib.rs
anchor/programs/token-2022/: Cargo.toml
anchor/programs/virtual-xyk/: Cargo.toml  README.md
anchor/tests/: anchor-counter.spec.ts  anchor-counter.ts  anchor-escrow.spec.ts  counter.spec.ts  escrow.spec.ts  puppet.spec.ts
counter-program/: Cargo.toml
counter-program/src/: lib.rs
cpi-example/: Cargo.toml
cpi-example/src/: lib.rs
native/addr-gating-counter/: Cargo.toml
native/addr-gating-counter/src/: lib.rs
native/counter-program/: Cargo.toml
native/cpi-example/src/: lib.rs
next-client/: package.json  pnpm-lock.yaml
next-client/src/app/: globals.css  layout.tsx  page.tsx
src/: App.tsx  main.tsx
src/addr-gating/: App.tsx
src/anchor-counter/: App.tsx
src/lib/: util.ts
src/spl-example/: App.tsx  index.html  main.tsx
vite-client/: README.md  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
vite-client/src/: App.tsx
(+36 files in other folders)
